force-app/main/default/objects/Faculty__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab Assistant</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Junior Lecturer</fullName>
            </value>
            <value>
                <fullName>Senior Lecturer</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>