force-app/main/default/objects/Faculty__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>Qualifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BBM</fullName>
            </value>
            <value>
                <fullName>MSc</fullName>
            </value>
            <value>
                <fullName>Bsc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>