force-app/main/default/objects/Faculty__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15,000</fullName>
            </value>
            <value>
                <fullName>20,000,</fullName>
            </value>
            <value>
                <fullName>25,000</fullName>
            </value>
            <value>
                <fullName>30,000</fullName>
            </value>
            <value>
                <fullName>40,000</fullName>
            </value>
            <value>
                <fullName>50,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>